--- a/Projeto1B_tecweb/notes/templates/notes/index.html
+++ b/Projeto1B_tecweb/notes/templates/notes/index.html
@@ -26,7 +26,7 @@
       class="form-card-title"
       type="text"
       name="tag"
-      placeholder="Nomeie sua tag"
+      placeholder="Adicione uma tag"
     />
     {% comment %} <label id="tag" type="text" name="tag" class="form-card-title">
       Selecione a tag</label
