--- a/Projeto1B_tecweb/notes/templates/notes/index.html
+++ b/Projeto1B_tecweb/notes/templates/notes/index.html
@@ -2,7 +2,7 @@
 <div class="appbar">
   <img class="logo" src="{% static 'notes/img/logo-getit.png' %}" />
   <span class="subtitle">Como o Post-it, mas com outro verbo</span>
-  <a href="/tags"><button type="submit">Lista de Tags</button></a>
+  <a href="/tags"><button type="submit" class="btn">Lista de Tags</button></a>
 </div>
 
 <main class="container">
@@ -26,17 +26,7 @@
       class="form-card-title"
       type="text"
       name="tag"
-      placeholder="Adicione uma tag"
-    />
-    {% comment %} <label id="tag" type="text" name="tag" class="form-card-title">
-      Selecione a tag</label
-    >
-    <select class="autoresize" id="tag" name="tag">
-      <option value="personal" class="form-card-title">Personal</option>
-      <option value="work" class="form-card-title">Work</option>
-      <option value="study" class="form-card-title">Study</option>
-      <option value="other" class="form-card-title">Other</option>
-    </select>{% endcomment %}
+      placeholder="Nomeie sua tag"/>
     <button class="btn" type="submit">Criar</button>
   </form>
 
@@ -45,7 +35,8 @@
     <li class="card">
       <h3 class="card-title">{{ note.title }}</h3>
       <div class="card-content">
-        <p>{{ note.content }}</p>
+        <p>{{ note.content }}</p></div>
+        <div class="card-content">
         <form method="post" action="/delete/{{note.id}}">
           {% csrf_token %}
           <button type="submit">Apagar</button>
