--- a/Projeto1B_tecweb/notes/templates/notes/tags.html
+++ b/Projeto1B_tecweb/notes/templates/notes/tags.html
@@ -2,9 +2,9 @@
 <div class="appbar">
   <img class="logo" src="{% static 'notes/img/logo-getit.png' %}" />
   <span class="subtitle">Como o Post-it, mas com outro verbo</span>
-  <a href="/tags"><button type="submit">Lista de Tags</button></a>
+  <a href="/tags"><button type="submit" class="btn">Lista de Tags</button></a>
   <form method="post">
-    {% csrf_token %}<button type="submit">Página inicial</button>
+    {% csrf_token %}<button type="submit" class="btn">Página inicial</button>
   </form>
 </div>
 
@@ -13,7 +13,7 @@
 {% for note in notes %}
     <li class="card">
         <a href="/tag/{{note.tag}}">
-          <button type="submit">{{note.tag}}</button></a>
+          <button type="submit" class="btn">{{note.tag}}</button></a>
       </div>
     </li>
     {% endfor %}
